# mavi-pro

./: PANDUAN_PENGGUNAAN.md  package-lock.json  package.json  vite.config.js
public/: key-generator.html
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AIProcessWorkspace.jsx  ActionRecognition.jsx  AdminPanel.jsx  AllowanceCalculator.jsx  AnalysisDashboard.jsx  BestWorstCycle.jsx  ComparisonDashboard.jsx  CycleAggregation.jsx  CycleSegmentation.jsx  CycleTimeAnalysis.jsx  DigitalTwinSimulator.jsx  ElementEditor.jsx  ElementRearrangement.jsx  ErgonomicAnalysis.jsx  FeatureMenu.jsx  FileExplorer.jsx  GlobalSettingsDialog.jsx  Header.jsx  Help.jsx  HelpButton.jsx  KnowledgeBase.jsx  LandingPage.jsx  LanguageSwitcher.jsx  LineBalancingBoard.jsx  Login.jsx  MTMCalculator.jsx  MachineLearningData.jsx  MainMenu.jsx  ManualCreation.jsx  MaviClass.jsx  NarrationRecorder.jsx  ObjectTracking.jsx  PitchDeck.jsx  ProjectButtons.jsx  PublicManualViewer.jsx  QualityControlAI.jsx  RealtimeCompliance.jsx  SessionManager.jsx  SpaghettiChart.jsx  StandardDataBuilder.jsx  (+13 more)
src/contexts/: AuthContext.jsx
src/data/: maviClassData.js
src/hooks/: useVideoPlayer.js
src/i18n/: translations.js
src/utils/: aiGenerator.js  angleCalculator.js  autoCycleDetector.js  cycleSegmentationDB.js  cycleSegmentationEngine.js  database.js  database.js_temp_append  excelExport.js  helpContent.jsx  knowledgeBaseDB.js  licenseUtils.js  poseDetector.js  projectExport.js  supabaseClient.js  teachableMachine.js  videoToImages.js  voiceCommandRecognizer.js
(+48 files in other folders)
